Bug Fix: error messages are not vertically center aligned in error service(TG-216)

--- a/src/app/core/error/error.component.sass
+++ b/src/app/core/error/error.component.sass
@@ -2,7 +2,7 @@
 
 .ps-error-component-container
   position: fixed
-  right: 5px
+  right: 10px
   bottom: 10px
   z-index: 999
   font-size: 0.85rem
@@ -17,10 +17,10 @@
   background-color: rgba(0, 0, 0, 0.68)
   min-height: 35px
   width: 280px
-  padding-left: 10px
+  padding: 10px
   border-color: $ink
   border-radius: 2px
-  box-shadow: 2px 2px 2px #666666
   margin-top: 5px
+  text-align: center
   @media (max-width: 420px)
     width: 100%
